# Chess-Engine

./: .gitignore  .~lock.board_grid.xlsx#  23.06.24 - move_finder.py  23.06.24.py  C:\Users\phili\Documents\python_maze-solver\maze_to_solve.txt  CMakeLists.txt  README.md  Untitled-1.ipynb  board_grid.xlsx  outline.txt  thoughts.txt
C/: a.out  main.c  position.c  position.h
C iterative move finder (defunct)/: a.out  main.c  position.c
b/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  tessmax
bit-board chess engine/: a.out  board.h  board_formatter.c  board_formatter.h  board_formatter.h.gch  lookuptables.c  lookuptables.h  magic_numbers.c  magic_numbers.h  main.c  move_lookuptables.c  move_lookuptables.h  move_lookuptables.h.gch  movefinder.c  movefinder.h  movefinder.h.gch
bitboard-chess-engine/: .clangd  CMakeLists.txt  tags
bitboard-chess-engine/.cache/clangd/index/: board.c.9EE5D08599920E51.idx  board.h.4696AC4A5CF9DCEB.idx  lookuptables.c.5FA8EF5622FA4B36.idx  lookuptables.h.21C9E5D9920BEA76.idx  main.c.FA9DC9B94AB4523B.idx  movefinder.c.238972729F1E7200.idx  movefinder.h.64BD245726739A3E.idx  piece.c.AA0569783D624B0C.idx  piece.h.3E049D78778E4DE9.idx
bitboard-chess-engine/movefinding/: board.c  movefinder.c  movefinder.h
bitboard-chess-engine/src/: main.c
bitboard-chess-engine/src/movefinding/: board.c  board.h  lookuptables.c  lookuptables.h  movefinder.c  movefinder.h
bitboard-chess-engine/src/search/: evaluate.c  evaluate.h  piece.c  piece.h  search.c  search.h
log/: log-2025-10-22-08-09-07.txt  log-2025-10-22-08-09-46.txt  log-2025-10-22-08-10-43.txt  log-2025-10-22-08-11-13.txt  log-2025-10-22-08-12-31.txt  log-2025-10-22-08-14-42.txt  log-2025-10-22-08-37-06.txt  log-2025-10-22-08-39-19.txt  log-2025-10-22-08-47-35.txt  log-2025-10-22-08-48-00.txt  log-2025-10-22-08-49-17.txt  log-2025-10-22-08-54-28.txt
python move solver (defunct)/: 23.06.24 - move_finder.py  23.06.24 - workingpy.py  23.06.24.py
src/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  local_main.c  main.c  tessmax  web_main.c
src/gui/: gui.c  log.c
src/interface/: movedisplay.c  movedisplay.h  ui.c  ui.h
src/movefinding/: board.c  board.h  lookuptables.c  lookuptables.h  memory.c  memory.h  movedisplay.c  movedisplay.h  movefinder.c  movefinder.h  transposition_table.c  transposition_table.h
src/search/: evaluate.c  evaluate.h  hash_tables.c  hash_tables.h  search.c  search.h
src/ui/: gui.c  gui.h  log.c  log.h  movedisplay.c  movedisplay.h  uci.c  ui.c  ui.h
web/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  tessmax
